--- a/index.html
+++ b/index.html
@@ -3,21 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="bg-body-tertiary">
   <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+    <h1 class="text-center my-4">Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
+    <form id="create-task-form" action="" method="POST" class="row mt-4 mb-3">
+      <div class="row d-flex justify-content-center">
+        <div class="col-auto"> 
+          <label for="new-task-description" class="fs-5 p-1">Task description:</label>
+        </div>
+        <div class="col-7">
+          <input type="text" id="new-task-description" name="new-task-description" class="form-control" placeholder="Add task">
+        </div>
+        <div class="col-auto"> 
+          <input class="btn btn-primary" id ="button-submit" type="submit" value="Create New Task">
+        </div>
+      </div>
     </form>
 
-    <div id="list">
-      <h2>My Todos:</h2>
-      <ul id="tasks">
+    <div id="list" class=" row mt-5 d-flex justify-content-center">
+      <h3 class="text-center mb-4">To Do List</h3>
+      <ul id="tasks" class="list-group list-group-numbered mx-5 col-6">
+        <li class="list-group-item d-flex justify-content-between align-items-center"> 
+          <span class="min-width"> Go for a walk at Karura Forest</span>
+          <button class="btn btn-outline-info btn-sm" onclick="editTask(this.previousElementSibling)">Edit</button>
+          <button class="btn btn-danger btn-sm btn-sm" onclick="deleteTask(this.parentElement)"> Delete</button>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center"> 
+          <span class="min-width"> Finish the code labs in LMS portal</span>
+          <button class="btn btn-outline-info btn-sm" onclick="editTask(this.previousElementSibling)">Edit</button>
+          <button class="btn btn-danger btn-sm btn-sm" onclick="deleteTask(this.parentElement)"> Delete</button>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center"> 
+          <span class="min-width"> Attend the online classes by Moringa</span>
+          <button class="btn btn-outline-info btn-sm" onclick="editTask(this.previousElementSibling)">Edit</button>
+          <button class="btn btn-danger btn-sm btn-sm" onclick="deleteTask(this.parentElement)"> Delete</button>
+        </li>
+
+        
       </ul>
     </div>
 
